Removed use of eawt APIs for Mac desktop and changed to standard Desktop calls for JDK 9.  Left in place for JDK8 backward compatibility. Fixed retina detection for JDK9 which no longer allows use of the private API we had to use in JDK8.  Left private API use in place as a fallback for JDK8.